deployment/hello-world-app/hello-world-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world-app
  name: hello-world-app
  labels:
    app.kubernetes.io/name: "hello-world-app"
    app.kubernetes.io/instance: "hello-world-app-001"
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: "kustomize"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "hello-world-app"
      app.kubernetes.io/instance: "hello-world-app-001"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "hello-world-app"
        app.kubernetes.io/instance: "hello-world-app-001"
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: "kustomize"
    spec:
      imagePullSecrets: []
      containers:
        - name: hello-world-app
          image: "ghcr.io/lcarneli/hello-world-app:1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: "/hello"
              port: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
