deployment/hello-world-app/hello-world-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hello-world-app
  name: hello-world-app
  labels:
    app.kubernetes.io/name: "hello-world-app"
    app.kubernetes.io/instance: "hello-world-app-001"
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: "kustomize"
spec:
  selector:
    app.kubernetes.io/name: "hello-world-app"
    app.kubernetes.io/instance: "hello-world-app-001"
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
