deployment/hello-world-app/hello-world-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-world-app
  name: hello-world-app
  annotations:
    kubernetes.io/ingress.class: "gce"
  labels:
    app.kubernetes.io/name: "hello-world-app"
    app.kubernetes.io/instance: "hello-world-app-001"
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: "kustomize"
spec:
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-world-app
                port:
                  number: 80
